fix(modal): adjust form field spacing, textarea color, checkbox attributes and span fill

--- a/css/styles.css
+++ b/css/styles.css
@@ -583,7 +583,7 @@ address {
  }
 
  .form-field {
-     margin-bottom: 8px;
+     margin-bottom: 16px;
  }
 
  .form-label {
@@ -703,9 +703,9 @@ address {
      justify-content: center;
      border: 1px solid rgba(46, 47, 66, 0.4);
      border-radius: 2px;
-     fill: transparent;
      background-color: #fff;
      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: transparent;
  }
 
  .agree-check {
@@ -716,6 +716,7 @@ address {
  .agree-checkbox:checked + .agree-label > .agree-box {
      background-color: #404bbf;
      border: none;
+     fill: #F4F4FD;
  }
 
  .agree-checkbox:checked + .agree-label > .agree-box .agree-check {
